@@ -1,5 +1,13 @@
 2015-03-30  Corinna Vinschen  <corinna@vinschen.de>
 
+	* cygheap.h (cygheap_domain_info::add_domain): Add prototype.
+	* uinfo.cc (cygheap_domain_info::add_domain): New method.
+	(pwdgrp::fetch_account_from_windows): Try to add domain explicitely
+	if it was not in the original list of trusted domains and go ahead
+	rather than bailing out.  Add comment to explain why.
+
+2015-03-30  Corinna Vinschen  <corinna@vinschen.de>
+
 	* cygtls.h (struct _cygtls): Convert thread_context to type CONTEXT.
 	* exceptions.cc (_cygtls::signal_debugger): Use sizeof (CONTEXT) for
 	size of CONTEXT copied for GDB's digestion.
